--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,4 +1,4 @@
-name: 更新最新动态
+name: Update Readme
 
 on:
   schedule:
@@ -10,6 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Update this repo's README with recent activity
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v2
@@ -19,3 +21,4 @@ jobs:
         with:
           COMMIT_MSG: 'Specify a custom commit message'
           MAX_LINES: 6
+          COMMIT_NAME: GitHub Activity Readme
