--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -22,3 +22,4 @@ jobs:
           COMMIT_MSG: 'Specify a custom commit message'
           MAX_LINES: 6
           COMMIT_NAME: GitHub Activity Readme
+          COMMIT_EMAIL: yzluofei@126.com
