--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -10,7 +10,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v2
             - name: Pull in leif160519 posts
-              uses: gautamkrishnar/blog-post-workflow@master
+              uses: gautamkrishnar/blog-post-workflow@1.8.4
               with:
                 max_post_count: 6
                 committer_username: "leif160519"
